--- a/partials/_layout.scss
+++ b/partials/_layout.scss
@@ -187,6 +187,7 @@
         @include sm {
             font-size: 1.5rem;
             line-height: 2.5rem;
+            padding: $dsdoub $dshalf;
         }
         img {
             height: 1.75rem;
